--- a/Facturador_CTECAM_3/Facturador_CTECAM_3/Facturador_CTECAM_3.csproj
+++ b/Facturador_CTECAM_3/Facturador_CTECAM_3/Facturador_CTECAM_3.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Data.Entity.Design" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
@@ -63,25 +64,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FACTURA.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>FACTURACTECAM.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model1.Context.cs">
-      <AutoGen>True</AutoGen>
+    <Compile Include="FACTURACTECAM.Context.cs">
+      <DependentUpon>FACTURACTECAM.Context.tt</DependentUpon>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.Context.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
     </Compile>
-    <Compile Include="Model1.cs">
-      <AutoGen>True</AutoGen>
+    <Compile Include="FACTURACTECAM.cs">
+      <DependentUpon>FACTURACTECAM.tt</DependentUpon>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
     </Compile>
-    <Compile Include="Model1.Designer.cs">
-      <AutoGen>True</AutoGen>
+    <Compile Include="FACTURACTECAM.Designer.cs">
+      <DependentUpon>FACTURACTECAM.edmx</DependentUpon>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.edmx</DependentUpon>
+      <AutoGen>True</AutoGen>
     </Compile>
     <Compile Include="NCF.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>FACTURACTECAM.tt</DependentUpon>
     </Compile>
     <Compile Include="PROGRAMAA.cs">
       <SubType>Form</SubType>
@@ -98,7 +99,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="USER_REGISTER.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>FACTURACTECAM.tt</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
@@ -110,13 +111,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EntityDeploy Include="Model1.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="Model1.edmx.diagram">
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -133,20 +127,28 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Model1.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </Content>
-    <Content Include="Model1.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.cs</LastGenOutput>
-    </Content>
     <None Include="Resources\SQL2019-SSEI-Expr.exe" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="FACTURACTECAM.Context.tt">
+      <DependentUpon>FACTURACTECAM.edmx</DependentUpon>
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>FACTURACTECAM.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="FACTURACTECAM.tt">
+      <DependentUpon>FACTURACTECAM.edmx</DependentUpon>
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>FACTURACTECAM.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <EntityDeploy Include="FACTURACTECAM.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>FACTURACTECAM.Designer.cs</LastGenOutput>
+    </EntityDeploy>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
