DB_FilePath_Exit_FIXED

--- a/Facturador_CTECAM_3/Facturador_CTECAM_3/Facturador_CTECAM_3.csproj
+++ b/Facturador_CTECAM_3/Facturador_CTECAM_3/Facturador_CTECAM_3.csproj
@@ -101,6 +101,9 @@
     <Compile Include="USER_REGISTER.cs">
       <DependentUpon>FACTURACTECAM.tt</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="INICIOO.resx">
+      <DependentUpon>INICIOO.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
