--- a/Facturador_CTECAM_3/Facturador_CTECAM_3/Facturador_CTECAM_3.csproj
+++ b/Facturador_CTECAM_3/Facturador_CTECAM_3/Facturador_CTECAM_3.csproj
@@ -104,6 +104,9 @@
     <EmbeddedResource Include="INICIOO.resx">
       <DependentUpon>INICIOO.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PROGRAMAA.resx">
+      <DependentUpon>PROGRAMAA.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
